--- a/MyUiTest/app/src/main/res/layout/activity_main.xml
+++ b/MyUiTest/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,23 @@
         android:layout_width="194dp"
         android:layout_height="162dp"
         android:text="Hello World!"
-        android:layout_marginTop="56dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.457"
+        android:background="#dcdcdc"
+        app:layout_constraintVertical_bias="0.5"
     />
+
+    <myuitest.someday.cn.myuitest.RatingView
+        android:id="@+id/ratingView"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+    </myuitest.someday.cn.myuitest.RatingView>
+
     <myuitest.someday.cn.myuitest.MultipleConditionalSortView
         android:id="@+id/multipleConditionalSortView"
         android:layout_width="match_parent"
