--- a/TestAudioPlay/app/src/main/res/layout/content_play_simple.xml
+++ b/TestAudioPlay/app/src/main/res/layout/content_play_simple.xml
@@ -17,27 +17,32 @@
         <TextView
             android:id="@+id/music1"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_margin="@dimen/text_margin"
             android:text="曲目1"/>
         <TextView
             android:id="@+id/music2"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_margin="@dimen/text_margin"
             android:text="曲目2"/>
         <TextView
             android:id="@+id/music3"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_margin="@dimen/text_margin"
             android:text="曲目3"/>
         <TextView
             android:id="@+id/music4"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:layout_margin="@dimen/text_margin"
             android:text="曲目4"/>
+        <testrootapp.someday.cn.testaudioplay.PlayMusicBar
+            android:id="@+id/playMusicBar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+        />
     </LinearLayout>
 
 </android.support.v4.widget.NestedScrollView>
