调整播放器的生命周期处理

--- a/TestAudioPlay/app/src/main/res/layout/activity_play_simple.xml
+++ b/TestAudioPlay/app/src/main/res/layout/activity_play_simple.xml
@@ -34,7 +34,7 @@
                 <SeekBar
                     android:id="@+id/seekbar"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="80dp"
                 />
             </RelativeLayout>
