--- a/TestAudioPlay/app/src/main/res/layout/content_play_simple.xml
+++ b/TestAudioPlay/app/src/main/res/layout/content_play_simple.xml
@@ -38,7 +38,7 @@
             android:layout_height="40dp"
             android:layout_margin="@dimen/text_margin"
             android:text="曲目4"/>
-        <testrootapp.someday.cn.testaudioplay.PlayMusicBar
+        <testrootapp.someday.cn.testaudioplay.widget.PlayMusicBar
             android:id="@+id/playMusicBar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
