--- a/TestAudioPlay/app/src/main/res/layout/view_play_music_bar.xml
+++ b/TestAudioPlay/app/src/main/res/layout/view_play_music_bar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     >
-    <testrootapp.someday.cn.testaudioplay.PlayMusicButton
+    <testrootapp.someday.cn.testaudioplay.widget.PlayMusicButton
         android:id="@+id/playMusicButton"
         android:layout_width="36dp"
         android:layout_height="36dp"
@@ -35,7 +35,7 @@
         android:textColor="#666666"
         android:gravity="bottom"
         android:paddingBottom="2.5dp"
-        android:text="那一夜那一夜那一夜那一夜那一夜那一夜那一夜"
+        android:text="暂无曲目"
         />
     <TextView
         android:id="@+id/playingTime"
@@ -46,7 +46,7 @@
         android:layout_alignLeft="@id/title"
         android:layout_alignRight="@id/title"
         android:layout_below="@id/title"
-        android:text="22：00/88：00"
+        android:text="00：00/00：00"
         android:paddingTop="2.5dp"
         />
 
